# Pyrlang

./: .gitignore  CHANGELOG.txt  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.py  test1.py
ErlangLib/: README.md  py.erl
Pyrlang/: __init__.py  atom.py  bases.py  gen.py  gen_server.py  logger.py  mailbox.py  net_kernel.py  node.py  pid.py  process.py  rex.py  term.py  util.py
Term/: Cargo.toml  Makefile  README.md
Term/Term/: __init__.py  bases.py  codec.py  erl_typing.py  fun.py  list.py  pid.py  py_codec_impl.py  reference.py
Term/docs/: .gitignore  Makefile
Term/docs/source/: Term.atom.rst  Term.bitstring.rst  Term.erl_typing.rst  Term.fun.rst  Term.list.rst  Term.pid.rst  Term.py_codec_impl.rst  Term.reference.rst  conf.py
Term/src/: consts.rs  decoder.rs  defs.rs  encoder.rs  errors.rs  helpers.rs  lib.rs  wrappers.rs
Term/test/: dist_etf_decode_test.py  etf_decode_test.py  etf_encode_test.py  etf_transitive_test.py  rust_extension_test.py
docs/: .buildinfo  async.asyncio_engine.html  async.base_engine.html  async.base_protocol.html  async.gevent_engine.html  build-library.html  calling_python.html  configuration.html  cookbook.html  data_types.html  dist.base_dist_protocol.html  dist.distflags.html  dist.distribution.html  dist.epmd.html  dist.in_dist_protocol.html  dist.node_opts.html  dist.out_dist_protocol.html  examples.html  gen.html  gen_server.html  genindex.html  index.html  net_kernel.html  node.html  objects.inv  process.html  py-modindex.html  pyrlang.notebook.html  pyrlang.util.html  rex.html  (+2 more)
docs-src/: make.bat
(+214 files in other folders)
