[package]
name = "term_codec"
version = "0.1.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@erlang-solutions.com>"]
edition = "2018"

[lib]
name = "term_codec"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.2"
features = ["extension-module"]

[dependencies]
byte = "0.2"
compress = "0.1.2"
failure = "0.1.2"
